One Piece Landing Page v0.9.5 1. Style.css - fixed problem of overlaping boxes in second page.

--- a/style.css
+++ b/style.css
@@ -61,10 +61,10 @@ p, h1, h2, h3, h4, h5, h6 {
 header .navbar{
     display: flex;
     justify-content: space-between;
-    position: fixed;
-    z-index: 0;
+    position: fixed;    
+    z-index: 5;
     width:100%;
-    background-color:rgba(6, 5, 5, 0.325)
+    background-color:rgba(6, 5, 5, 0.8)
 }
 #hamnav label, #hamburger{
     display:none;
@@ -120,38 +120,38 @@ header .navbar{
 .second_page{
     display: flex;
     flex-direction: column;
-    z-index: 1;
+    align-items: center;
+    z-index: 2;
     min-height:100%;
     min-width:100%;
     background-color:#168e8abb;
     flex-grow:1;
-    flex-shrink: 1;
+    flex-shrink: 0;
 }
 
 /*  */
 /* It's second page title */
 .second_page .second_page_title{
     text-align: center;
-    width:100%;
+    width: 100%;
     color:white;
     font-size: 25px;
     margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left:0px
+    margin-left:0px;
 }
+
 hr{
     margin-top:10px;
-    margin-bottom:10px;
     border-color: white ;
 }
 /*  */
 /* It's container for section's on second page */
 .second_page_content{
     display: flex;
-    justify-content:space-evenly;
+    justify-content:space-around;
     flex-wrap: wrap;
     height: 100%;
-    width:100%;
+    width:80%;
 
 }
 /* It's style for content
@@ -163,7 +163,7 @@ hr{
     border: 1px solid white;
     background-color: #ffe4c4;
     box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
-    margin:15px -15px 15px -15px;
+    margin:15px 15px;
     min-width: 300px;
     min-height: 477.326px;
 }
@@ -223,7 +223,7 @@ hr{
     flex-wrap: wrap;
     /* justify-content: center;
     align-items: center; */
-    background-color: rgba(0, 0, 0, 0.562);
+    background-color: rgba(0, 0, 0, 0.5);
     color:white;
 }
 
